--- a/css/style.scss
+++ b/css/style.scss
@@ -16,7 +16,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url('./robot.gif');
+  background: url('../image/robot.gif');
   background-size: contain;
   background-position: left center;
   background-repeat: no-repeat;
@@ -34,19 +34,19 @@ button {
   border: none;
   border-radius: 5px;
   box-shadow: 2px 2px 20px 10px rgba(0, 0, 0, 0.2);
-}
 
-button:hover {
-  filter: brightness(95%);
-}
+  &:hover {
+    filter: brightness(95%);
+  }
 
-button:active {
-  transform: scale(0.98);
-}
+  &:active {
+    transform: scale(0.98);
+  }
 
-button:disabled {
-  cursor: default;
-  filter: brightness(30%);
+  &:disabled {
+    cursor: default;
+    filter: brightness(30%);
+  }
 }
 
 /* Media Query: Tablet or Smaller */
